# baguette-metro

./: .env.example  .gitignore  .pre-commit-config.yaml  ABOUT_TRANSLATIONS_COMPLETE.md  AI_ETHICS_POLICY.md  ANALYSE_API_HYBRIDE_MVP.md  BACKUP_SUMMARY.md  CLARIFICATION_SOLUTIONS_CHATBOT.md  CONFIGURATION_API_KEYS.md  DETAIL_MIGRATION_PYTORCH.md  Dockerfile  GITHUB_MANUAL_SETUP.md  GITHUB_SETUP_COMPLETE.md  JOUR1_TRANSLATIONS_COMPLETE.md  LICENSE  PLAN_ACTION_FINAL.md  PLAN_BOOTCAMP_5JOURS.md  README.md  SECURITY.md  STATUS.md  STATUT_CHANGEMENTS.md  STRATEGIC_UPDATE_PLAN.md  audit_google_places.py  config_mistral.py  docker-compose.yml  pyproject.toml  requirements.txt  server_secure.py  start_api.sh  start_server.sh
.github/: SECRETS.md  SECRETS_SETUP.md
.github/environments/: production.yml  staging.yml
.github/workflows/: ci-cd.yml
backup/backup_20250902_195325_DASHBOARD_COMPLET/: dashboard.css  dashboard.html  dashboard.js
config/: ratp_collector.toml
data/cache/: ratp_cache.duckdb
data/processed/: ingestion_metadata_bus_20250827_231702.json  ingestion_metadata_bus_20250827_231849.json  ingestion_metadata_bus_20250827_231924.json  ingestion_metadata_bus_20250827_232004.json  ingestion_metadata_bus_20250827_232050.json  ingestion_metadata_bus_20250827_232204.json  ingestion_metadata_bus_20250827_232320.json  ingestion_metadata_metros_20250827_231659.json  ingestion_metadata_metros_20250827_231846.json  ingestion_metadata_metros_20250827_231921.json  ingestion_metadata_metros_20250827_232001.json  ingestion_metadata_metros_20250827_232046.json  ingestion_metadata_metros_20250827_232201.json  ingestion_metadata_metros_20250827_232317.json  ingestion_metadata_rers_20250827_231700.json  ingestion_metadata_rers_20250827_231847.json  ingestion_metadata_rers_20250827_231922.json  ingestion_metadata_rers_20250827_232002.json  ingestion_metadata_rers_20250827_232048.json  ingestion_metadata_rers_20250827_232202.json  ingestion_metadata_rers_20250827_232318.json  ingestion_metadata_tramways_20250827_231701.json  ingestion_metadata_tramways_20250827_231848.json  ingestion_metadata_tramways_20250827_231923.json  ingestion_metadata_tramways_20250827_232003.json  ingestion_metadata_tramways_20250827_232049.json  ingestion_metadata_tramways_20250827_232203.json  ingestion_metadata_tramways_20250827_232319.json
docs/: BUSINESS_EVALUATION.md  DYNAMIC_DASHBOARD_GUIDE.md  ORCHESTRATION.md  RATP_API_KEY_GUIDE.md  RATP_INTEGRATION_GUIDE.md  SECRET_KEY_GUIDE.md  USER_GUIDE.md
frontend/: dashboard_omotenashi.html  debug_bakeries.html  index.html  index_advanced.html  index_advanced_new.html  index_advanced_old_20250903_150151.html
frontend/css/: dashboard_omotenashi.css  styles.css
frontend/js/: app.js  app_advanced.js  app_integrated.js  app_integrated.js.backup  citymapper_simulated_data.js  dashboard-transmitter.js  dashboard_omotenashi.js  temp_labels.js
models/: eta_predictor.joblib  eta_scaler.joblib  lightweight_eta_model_preprocessors.joblib
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: init-db.sql  setup_dev.sh  setup_github.sh
src/api/: ai_ethics.py  ai_service.py  chat_service.py  citymapper_service.py  config.py  geo_fallback_service.py  geocoding_service.py  google_directions_service.py  google_places_service.py  gtfs_rt_service.py  hybrid_chat_service.py  hybrid_routes.py  main.py  main_backup_before_restoration.py  main_hybrid.py  mapbox_service.py  mistral_ai_service.py  mistral_config_temp.py  optimized_places_service.py  ratp_routes.py  ratp_service.py  route_service.py  routes.py  security.py  smart_places_service.py
src/config/: mistral_config.py
src/data/: google_places.py  gtfs_rt_collector.py  mock_data.py  openrouter.py  openrouter_client.py  ratp_data_integration.py  ratp_traffic_collector.py
(+81 files in other folders)
